--- a/templates/newsletters/confirm.html.twig
+++ b/templates/newsletters/confirm.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quantum - Confirm email {% endblock %}
+{% block title %}<title>Quantum - Newsletter</title>{% endblock %}
 
 {% block content %}
 
