--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quantum - Contact{% endblock %}
+{% block title %}<title>Quantum - Contact</title>{% endblock %}
 
 {% block banner %}
 
