--- a/templates/website/article/search.html.twig
+++ b/templates/website/article/search.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quantum - Blog{% endblock %}
+{% block title %}<title>Quantum - Blog</title>{% endblock %}
 
 {% block banner %}
 
