--- a/templates/error/error.html.twig
+++ b/templates/error/error.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% block title %}<title>Quantum - Error</title>{% endblock %}
 
 {% block content %}
     <h1>Error {{ status_code }}: {{ status_text }}</h1>
