--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -90,9 +90,7 @@
         <div class="row">
         <div class="col-md-12">
             <h3 class="column-title">Nous aimerions vous entendre</h3>
-            <!-- contact form works with formspree.io  -->
-            <!-- contact form activation doc: https://docs.themefisher.com/constra/contact-form/ -->
-            <form id="contact-form" action="#" method="post" role="form">
+            <form id="contact-form" action="{{path('web_contact')}}" method="post" role="form">
             <div class="error-container"></div>
             <div class="row">
                 <div class="col-md-4">
