--- a/templates/website/aboutus.html.twig
+++ b/templates/website/aboutus.html.twig
@@ -4,82 +4,86 @@
 
 {% block banner %}
 
-    <div id="banner-area" class="banner-area" style="background-image:url(/assets/images/banner/banner1.jpg)">
-    <div class="banner-text">
-        <div class="container">
-            <div class="row">
-            <div class="col-lg-12">
-                <div class="banner-heading">
-                    <h1 class="banner-title">Presentation</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                        <li class="breadcrumb-item"><a href="#">Quantum</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Qui sommes-nous</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div><!-- Col end -->
-            </div><!-- Row end -->
-        </div><!-- Container end -->
-    </div><!-- Banner text end -->
+    {% set image = sulu_resolve_media(article.thumbnail,app.request.locale) %}
+    {% if image %}
+        {% set imageUrl = image.formats['1600x300'] %}
+    {% endif %}
+    <div id="banner-area" class="banner-area" style="background-image:url({{imageUrl}})">
+        <div class="banner-text">
+            <div class="container">
+                <div class="row">
+                <div class="col-lg-12">
+                    <div class="banner-heading">
+                        <h1 class="banner-title">Presentation</h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                            <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                            <li class="breadcrumb-item"><a href="#">Quantum</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">
+                                {% if article is defined and article is not null %}{{article.titre | title}}{% endif %}
+                            </li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div><!-- Col end -->
+                </div><!-- Row end -->
+            </div><!-- Container end -->
+        </div><!-- Banner text end -->
     </div><!-- Banner area end --> 
 
 {% endblock %}
 
 {% block content %}
 
+    {% if article is defined and article is not null %}
+
     <section id="main-container" class="main-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-            <h3 class="column-title">Qui sommes nous</h3>
-            <p>Suspendisse condimentum sapien a ex aliquet egestas. Sed auctor, neque ac rhoncus commodo, ligula lacus gravida orci, tempus sollicitudin magna ante ultricies velit</p>
-            <blockquote><p>Semporibus autem quibusdam et aut officiis debitis aut rerum est aut optio cumque nihil necessitatibus autemn ec tincidunt nunc posuere ut</p></blockquote>
-            <p>He lay on his armour-like  back, and if he lifted. ultrices ultrices sapien, nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn’t anything embarrassing.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                <h3 class="column-title">{{article.titre | title}}</h3>
+                <p>{{article.contenu | raw}}</p>
 
-            </div><!-- Col end -->
+                </div><!-- Col end -->
 
-            <div class="col-lg-6 mt-5 mt-lg-0">
-            
-            <div id="page-slider" class="page-slider small-bg">
+                {% if article.medias | length > 0 %}
 
-                <div class="item" style="background-image:url(/assets/images/slider-pages/slide-page1.jpg)">
-                    <div class="container">
-                        <div class="box-slider-content">
-                        <div class="box-slider-text">
-                            <h2 class="box-slide-title">Valeur 1</h2>
-                        </div>    
-                        </div>
-                    </div>
-                </div><!-- Item 1 end -->
+                <div class="col-lg-6 mt-5 mt-lg-0">
+                
+                    <div id="page-slider" class="page-slider small-bg">
 
-                <div class="item" style="background-image:url(/assets/images/slider-pages/slide-page2.jpg)">
-                    <div class="container">
-                        <div class="box-slider-content">
-                        <div class="box-slider-text">
-                            <h2 class="box-slide-title">Valeur 2</h2>
-                        </div>    
-                        </div>
-                    </div>
-                </div><!-- Item 1 end -->
+                        {% for media in article.medias %}
+                            {% set image = sulu_resolve_media(media,app.request.locale) %}
+                            {% if image %}
+                                {% set imageUrl = image.formats['555x330'] %}
+                                <div class="item" style="background-image:url({{imageUrl}})">
+                                    <div class="container">
+                                        <div class="box-slider-content">
+                                        <div class="box-slider-text">
+                                            <h2 class="box-slide-title">{{image.name | split('.', 2)[0] }}</h2>
+                                        </div>    
+                                        </div>
+                                    </div>
+                                </div><!-- Item 1 end -->
 
-                <div class="item" style="background-image:url(/assets/images/slider-pages/slide-page3.jpg)">
-                    <div class="container">
-                        <div class="box-slider-content">
-                        <div class="box-slider-text">
-                            <h2 class="box-slide-title">Valeur 3</h2>
-                        </div>    
-                        </div>
-                    </div>
-                </div><!-- Item 1 end -->
-            </div><!-- Page slider end-->          
-            
+                            {% endif %}
+                            
+                        {% endfor %}
 
-            </div><!-- Col end -->
-        </div><!-- Content row end -->
+                    </div><!-- Page slider end-->          
+                
 
-    </div><!-- Container end -->
+                </div><!-- Col end -->
+
+                    
+                {% endif %}
+
+            </div><!-- Content row end -->
+
+        </div><!-- Container end -->
     </section><!-- Main container end -->
+    
+    {% endif %}
+
 
 {% endblock %}
