--- a/templates/website/service/index.html.twig
+++ b/templates/website/service/index.html.twig
@@ -29,147 +29,82 @@
 
 {% block content %}
 
-  <section id="main-container" class="main-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="shuffle-btn-group">
-            <label class="active" for="all">
-              <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">TOUT
-            </label>
-            <label for="reseau">
-              <input type="radio" name="shuffle-filter" id="reseau" value="reseau">RÉSEAU
-            </label>
-            <label for="distribution">
-              <input type="radio" name="shuffle-filter" id="distribution" value="distribution">DISTRIBUTION
-            </label>
-            <label for="maintenance">
-              <input type="radio" name="shuffle-filter" id="maintenance" value="maintenance">MAINTENANCE
-            </label>
-            <label for="formation">
-              <input type="radio" name="shuffle-filter" id="formation" value="formation">FORMATION
-            </label>
-            <label for="consultance">
-              <input type="radio" name="shuffle-filter" id="consultance" value="consultance">CONSULTANCE
-            </label>
-            <label for="autres">
-              <input type="radio" name="shuffle-filter" id="autres" value="autres">AUTRES
-            </label>
-          </div><!-- project filter end -->
+  {% if projets is defined and projets | length > 0 %}
 
-
-          <div class="row shuffle-wrapper">
-            <div class="col-1 shuffle-sizer"></div>
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;maintenance&quot;,&quot;autres&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project1.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project1.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html"> tortor pretium dictum</a>
-                    </h3>
-                    <p class="project-cat">Réseau, Autre</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 1 end -->
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;autres&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project2.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project2.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html">Nulla ex purus</a>
-                    </h3>
-                    <p class="project-cat">Autres</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 2 end -->
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;formation&quot;,&quot;reseau&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project3.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project3.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html">dui non imperdiet sagittis</a>
-                    </h3>
-                    <p class="project-cat">Formation</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 3 end -->
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;distribution&quot;,&quot;formation&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project4.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project4.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html">id ornare neque metus ac</a>
-                    </h3>
-                    <p class="project-cat">Formation</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 4 end -->
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;formation&quot;,&quot;distribution&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project5.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project5.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html">Nulla ex purus</a>
-                    </h3>
-                    <p class="project-cat">Distribution</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 5 end -->
-
-            <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;consultance&quot;]">
-              <div class="project-img-container">
-                <a class="gallery-popup" href="/assets/images//projects/project6.jpg" aria-label="project-img">
-                  <img class="img-fluid" src="/assets/images//projects/project6.jpg" alt="project-img">
-                  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                </a>
-                <div class="project-item-info">
-                  <div class="project-item-info-content">
-                    <h3 class="project-item-title">
-                      <a href="projects-single.html">nisl sed nunc suscipit</a>
-                    </h3>
-                    <p class="project-cat">Consultance</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- shuffle item 6 end -->
-          </div><!-- shuffle end -->
+    <section id="project-area" class="project-area solid-bg">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-12">
+            <h2 class="section-title">Travail d'Excelence</h2>
+            <h3 class="section-sub-title">Services rendus</h3>
+          </div>
         </div>
+        <!--/ Title row end -->
 
+        <div class="row">
+          <div class="col-12">
+            <div class="shuffle-btn-group">
+              <label class="active" for="all">
+                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">TOUT
+              </label>
+              {% if categories is defined and categories | length > 0 %}
+                {% for categorie in categories %}
+                  <label for="{{ categorie.key}}">
+                    <input type="radio" name="shuffle-filter" id="{{ categorie.key}}" value="{{ categorie.key}}">{{ categorie.key}}
+                  </label>                  
+                {% endfor %}
+              {% endif %}
 
-      </div><!-- Content row end -->
+            <div class="row shuffle-wrapper">
+              <div class="col-1 shuffle-sizer"></div>
 
-    </div><!-- Conatiner end -->
-  </section><!-- Main container end -->
+                {% for projet in projets %}
+                  {% set groupe = [] %}
+                  {% set CategoryNames = [] %}
+                  {% for category in projet.categories %}
+                    {% set groupe = groupe|merge([category.key]) %} 
+                    {% set CategoryNames = CategoryNames|merge([ category.key]) %} 
+                  {% endfor %}
+
+                  {% set image = sulu_resolve_media(projet.thumbnail,app.request.locale) %}
+                  {% if image is not null %}
+
+                    <div class="col-lg-4 col-md-6 shuffle-item" data-groups="{{groupe | json_encode()}}">
+                      <div class="project-img-container">
+                        <a class="gallery-popup" href="{{image.formats['750x600']}}" aria-label="project-img">
+                          <img class="img-fluid" src="{{image.formats['750x600']}}">
+                          <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                        </a>
+                        <div class="project-item-info">
+                          <div class="project-item-info-content">
+                            <h3 class="project-item-title">
+                              <a href="{{path('web_service_rendu',{'slug':projet.slug})}}"> {{projet.titre | title}}</a>
+                            </h3>
+                            <p class="project-cat">{{CategoryNames|join(' , ')}}  </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  {% endif %}
+                                   
+                {% endfor %}
+             
+            </div>
+            <!-- shuffle end -->
+          </div>
+
+          <div class="col-12">
+            <div class="general-btn text-center">
+              <a class="btn btn-primary" href="{{path('web_services_rendus')}}">Voir tous les projets</a>
+            </div>
+          </div>
+
+        </div><!-- Content row end -->
+      </div>
+      <!--/ Container end -->
+    </section><!-- Project area end -->
+
+  {% endif %}
 
 
 {% endblock %}
